[gd_scene load_steps=11 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Game.gd" type="Script" id=2]
[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://art/House In a Forest Loop.ogg" type="AudioStream" id=4]
[ext_resource path="res://art/gameover.wav" type="AudioStream" id=5]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 50
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 50
font_data = ExtResource( 3 )

[sub_resource type="Curve2D" id=5]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -1, -4, 0, 0, 0, 0, 1021, -2, 0, 0, 0, 0, 1023, 600, 0, 0, 0, 0, -2, 598, 0, 0, 0, 0, -1, -4 )
}

[node name="Game" type="Node2D"]
script = ExtResource( 2 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 508, 233 )
monitoring = false
speed = 150

[node name="Timer" type="Timer" parent="."]

[node name="Timer2" type="Timer" parent="."]
wait_time = 1.5

[node name="Enemys" type="Node2D" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Score" type="Label" parent="CanvasLayer"]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -186.0
margin_right = 186.0
margin_bottom = 65.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="Button" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -73.0
margin_top = -186.0
margin_right = 73.0
margin_bottom = -105.0
custom_fonts/font = SubResource( 2 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dodge" type="Label" parent="CanvasLayer"]
visible = false
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -170.0
margin_bottom = -103.0
custom_fonts/font = SubResource( 3 )
text = "Dodge The Creeps!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="High Score" type="Label" parent="CanvasLayer"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -341.0
margin_top = 83.0
margin_right = 341.0
margin_bottom = 164.0
custom_fonts/font = SubResource( 4 )
text = "High Score: 0"
align = 1

[node name="music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = 2.239

[node name="death" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = 3.496

[node name="EnemyPath" type="Path2D" parent="."]
curve = SubResource( 5 )

[node name="EnemySpawnLocation" type="PathFollow2D" parent="EnemyPath"]
position = Vector2( -1, -4 )
rotation = 0.00195691

[connection signal="body_entered" from="Player" to="." method="_on_Player_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
[connection signal="pressed" from="CanvasLayer/Start" to="." method="_on_Start_pressed"]
